--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,14 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piece Collector<%=env%></title>
+    <title>pieceCollector</title>
   </head>
   <body>
-    <div id="app">
-      <header>
-        test
-      </div>
-    </div>
+    <div id="nav"></div>
+    <div id="root"></div>
   </body>
 </html>
