--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>pieceCollector</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Piece Collector<%=env%></title>
   </head>
   <body>
-    <div id="nav"></div>
-    <div id="root"></div>
+    <div id="app">
+      <header>
+        test
+      </div>
+    </div>
   </body>
 </html>
